<resources>

    <string name="app_name">EmployeeLeaveManagement</string>

    //login Activity strings
    <string name="mocu_eleave">MoCU\neLeave</string>
    <string name="employee_smartart">Employee SmartArt</string>
    <string name="welcome_to_mocu_eleave">Welcome to MoCU eLeave</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or">or</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_up">Sign Up</string>

    //Registration Activity String First screen
    <string name="create_an_account">Create an Account</string>
    <string name="register_name">Full Name</string>
    <string name="register_phone_no">Phone Number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="repeat_password">Repeat password</string>
    <string name="_continue">Continue</string>

    //Registration Activity String Second Screen
    <string name="choose_gender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="select_birthday">Select Birthday</string>
    <string name="select_country">Select Country</string>
    <string name="employee_id">Check Number</string>

    //VerifyOTP screen
    <string name="code">Co\nde</string>
    <string name="verification">Verification</string>
    <string name="enter_one_time_password_sent_on">Enter One Time Password sent on</string>
    <string name="_255717975397">+255717975397</string>
    <string name="verify_code">Verify code</string>
    <string name="phone_number_verification">Phone Number Verification</string>
    <string name="Employee_name">Demetus Chilumanga</string>
    <string name="employee_picture">Employee Picture</string>
    <string name="Professional_title_hod">Head of Department (HoD)</string>
    <string name="Professional_title_hr">Human Resource Officer</string>
    <string name="leave_history">Leave History</string>
    <string name="dashboard">Dashboard</string>
    <string name="_10">10</string>
    <string name="annual_calender">Annual Calender</string>
    <string name="annual">Annual</string>
    <string name="title_activity_hello">Hello</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string-array name="leave_types">
        <item>Select Leave Type</item>
        <item>Annual Leave</item>
        <item>Sick Leave</item>
        <item>Sabbatical Leave</item>
        <item>Maternity Leave</item>
        <item>Paternity Leave</item>
        <item>No Pay Leave</item>
    </string-array>

    <string name="leave_type_prompt">Leave Type</string>

    <string-array name="fbis_department">
        <item>Select Department</item>
        <item>Department of Law</item>
        <item>Department of Accounting and Finance</item>
        <item>Department of Microfinance and Banking</item>
        <item>Department of Marketing and Enterprise Management</item>
        <item>Department of Information and Communication Technology</item>
        <item>Department of Procurement and Supply Chain Management</item>
        <item>Department of Human Capital Management and Administration</item>
    </string-array>


    <string name="department_prompt">Department</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>