<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Common.RegistrationActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewEmployee"
            android:layout_width="match_parent"
            android:layout_height="768dp"
            android:layout_marginTop="-250dp"
            android:contentDescription="@string/employee_smartart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/employee" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            style="?attr/materialCardViewElevatedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            app:cardCornerRadius="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/TxtViewWelcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/create_an_account"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/poppins_bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/NameEdtTxtLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/TxtViewWelcome"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:hint="@string/register_name"
                    app:endIconMode="clear_text"
                    app:expandedHintEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EdtTxtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/EmailEdtTxtLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/NameEdtTxtLayout"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:hint="@string/e_mail"
                    app:endIconMode="clear_text"
                    app:expandedHintEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:hintTextColor="@color/black"
                    app:placeholderText="someone@gmail.com">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EdtTxtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/EmployeeIDEdtTxtLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/EmailEdtTxtLayout"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    app:endIconMode="clear_text"
                    android:hint="@string/employee_id"
                    app:expandedHintEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:hintTextColor="@color/black"
                    app:placeholderText="1938**********">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EdtTxtEmployeeID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textLongMessage" />


                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/PasswordEdtTxtLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/EmployeeIDEdtTxtLayout"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:hint="@string/password"
                    app:endIconMode="password_toggle"
                    app:expandedHintEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EdtTxtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/RepeatPasswordEdtTxtLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/PasswordEdtTxtLayout"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:hint="@string/repeat_password"
                    app:endIconMode="password_toggle"
                    app:expandedHintEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EdtTxtRepeatPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/BtnContinue"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_below="@+id/RepeatPasswordEdtTxtLayout"
                    android:layout_margin="10dp"
                    android:layout_marginHorizontal="80dp"
                    android:backgroundTint="@color/blue"
                    android:text="@string/_continue"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/TxtViewHaveAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/BtnContinue"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="10dp"
                    android:padding="2dp"
                    android:text="@string/already_have_an_account"
                    app:fontFamily="@font/poppins_regular" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/TxtViewSignUpHere"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/BtnContinue"
                    android:layout_marginStart="1dp"
                    android:layout_marginBottom="10dp"
                    android:layout_toEndOf="@+id/TxtViewHaveAccount"
                    android:padding="2dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/blue"
                    app:fontFamily="@font/poppins_regular" />


            </RelativeLayout>


        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>