<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Common.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewEmployee"
            android:layout_width="match_parent"
            android:layout_height="768dp"
            android:layout_marginTop="-250dp"
            android:contentDescription="@string/employee_smartart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/employee" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            style="?attr/materialCardViewElevatedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            app:cardCornerRadius="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/TxtViewVerifyNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/phone_number_verification"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/poppins_bold" />

                <ImageView
                    android:id="@+id/imgViewSendCode"
                    android:layout_width="200dp"
                    android:layout_height="300dp"
                    android:layout_centerHorizontal="true"
                    android:includeFontPadding="false"
                    android:layout_below="@id/TxtViewVerifyNo"
                    android:src="@drawable/sendotp"
                    />


                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imgViewSendCode"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-30dp"
                    android:layout_marginStart="170dp"
                    android:visibility="visible"
                    android:indeterminate="true"
                    app:indicatorColor="@color/blue"
                    app:trackColor="@color/black" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/TxtViewVerification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:textAlignment="center"
                    android:layout_below="@id/progressBar"
                    android:gravity="center"
                    android:text="@string/verification"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    app:fontFamily="@font/poppins_bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/TxtViewVerifyDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_below="@id/TxtViewVerification"
                    android:text="@string/enter_one_time_password_sent_on"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/poppins_medium" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/TxtViewVerifiedPhoneNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_below="@id/TxtViewVerifyDescription"
                    android:text="@string/_255717975397"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/poppins_bold" />

                <com.chaos.view.PinView
                    android:id="@+id/PinViewVerifyOTP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_below="@id/TxtViewVerifiedPhoneNo"
                    android:contentDescription="Pin View "
                    app:itemCount="6"
                    app:itemWidth="50dp"
                    app:itemHeight="50dp"
                    android:layout_centerInParent="true"
                    app:lineColor="@color/black"
                    android:itemBackground="@color/cardview_light_background"
                    style="@style/PinWidget.PinView"
                    android:inputType="number"
                    android:cursorVisible="true"
                    app:cursorColor="@color/grey"
                    app:hideLineWhenFilled="true"
                    app:itemRadius="5dp"/>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/BtnVerifyOTP"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    app:layout_constraintVertical_chainStyle="packed"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_below="@+id/PinViewVerifyOTP"
                    android:layout_margin="20dp"
                    android:backgroundTint="@color/blue"
                    android:text="@string/verify_code"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/BtnResendOTP"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_below="@+id/BtnVerifyOTP"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20dp"
                    android:text="Resend OTP"
                    android:textAllCaps="true"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/blue"
                    android:textSize="14sp" />



            </RelativeLayout>


        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>